@@ -38,6 +38,7 @@ t/separators.t
 t/stdin_compressed.t
 t/stdin_uncompressed.t
 t/speed.pl
+t/mailboxes/binary_body.txt
 t/mailboxes/gnus.txt
 t/mailboxes/mailarc-1.txt
 t/mailboxes/mailarc-1-dos.txt
@@ -60,6 +61,7 @@ t/results/grep_3
 t/results/grep_4
 t/results/grep_5
 t/results/none
+t/results/length_binary_body.stdout
 t/results/length_gnus.stdout
 t/results/length_mailarc-1.stdout
 t/results/length_mailarc-1-dos.stdout
@@ -67,6 +69,7 @@ t/results/length_mailarc-2.stdout
 t/results/length_mailarc-3.stdout
 t/results/length_mailseparators.stdout
 t/results/length_newlines_at_beginning.stdout
+t/results/line_number_binary_body.stdout
 t/results/line_number_gnus.stdout
 t/results/line_number_mailarc-1.stdout
 t/results/line_number_mailarc-1-dos.stdout
@@ -74,6 +77,7 @@ t/results/line_number_mailarc-2.stdout
 t/results/line_number_mailarc-3.stdout
 t/results/line_number_mailseparators.stdout
 t/results/line_number_newlines_at_beginning.stdout
+t/results/number_binary_body.stdout
 t/results/number_gnus.stdout
 t/results/number_mailarc-1.stdout
 t/results/number_mailarc-1-dos.stdout
@@ -81,6 +85,7 @@ t/results/number_mailarc-2.stdout
 t/results/number_mailarc-3.stdout
 t/results/number_mailseparators.stdout
 t/results/number_newlines_at_beginning.stdout
+t/results/offset_binary_body.stdout
 t/results/offset_gnus.stdout
 t/results/offset_mailarc-1.stdout
 t/results/offset_mailarc-1-dos.stdout
@@ -88,6 +93,7 @@ t/results/offset_mailarc-2.stdout
 t/results/offset_mailarc-3.stdout
 t/results/offset_mailseparators.stdout
 t/results/offset_newlines_at_beginning.stdout
+t/results/reset_binary_body.stdout
 t/results/reset_gnus.stdout
 t/results/reset_mailarc-1.stdout
 t/results/reset_mailarc-1-dos.stdout
@@ -107,7 +113,6 @@ inc/Algorithm/Diff.pm
 inc/ExtUtils/AutoInstall.pm
 inc/File/Spec.pm
 inc/File/Spec/Unix.pm
-inc/List/Util.pm
 inc/Module/Install/AutoInstall.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
